// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas al Componente GitExpertApp Debe mostrarse correctamente la categoria 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Hola"
      key="Hola"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas al Componente GitExpertApp Mostrar una lista categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Marvel"
      key="Marvel"
    />
    <GifGrid
      category="flores"
      key="flores"
    />
    <GifGrid
      category="osos"
      key="osos"
    />
    <GifGrid
      category="gatos"
      key="gatos"
    />
    <GifGrid
      category="perros"
      key="perros"
    />
    <GifGrid
      category="##@@@"
      key="##@@@"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas al Componente GitExpertApp debe mostrar todas las categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
    <GifGrid
      category="MC"
      key="MC"
    />
    <GifGrid
      category="##11@@@"
      key="##11@@@"
    />
  </ol>
</Fragment>
`;
